--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
-    "@react-three/drei": "^9.90.0",
+    "@react-three/drei": "^9.90.1",
+    "@react-three/fiber": "^8.15.12",
     "framer-motion": "^10.16.15",
     "maath": "^0.10.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-tilt": "^1.0.2",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.159.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
